--- a/House_Prices_Prediction/XGBoost Submission.ipynb
+++ b/House_Prices_Prediction/XGBoost Submission.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "<class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -45,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_X, test_X, train_y, test_y = train_test_split(X, y.as_matrix(), test_size=0.25)\n",
@@ -54,18 +47,27 @@
     "my_imputer = Imputer()\n",
     "train_X = my_imputer.fit_transform(train_X)\n",
     "test_X = my_imputer.transform(test_X)\n",
-    "\n",
-    "X = my_imputer.transform(X)\n",
     "submission_X = my_imputer.transform(submission_X)\n",
+    "\n",
+    "\n",
+    "\n",
     "#rint(type(X))\n",
     "#print(type(submission_X))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lazyowl/anaconda3/lib/python3.6/site-packages/sklearn/cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -76,7 +78,7 @@
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error : 17341.1435146\n"
+      "Mean Absolute Error : 16745.1397795\n"
      ]
     }
    ],
@@ -119,107 +121,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:181177\n",
+      "[0]\tvalidation_0-rmse:173945\n",
       "Will train until validation_0-rmse hasn't improved in 5 rounds.\n",
-      "[1]\tvalidation_0-rmse:164963\n",
-      "[2]\tvalidation_0-rmse:149616\n",
-      "[3]\tvalidation_0-rmse:136303\n",
-      "[4]\tvalidation_0-rmse:124758\n",
-      "[5]\tvalidation_0-rmse:114405\n",
-      "[6]\tvalidation_0-rmse:105115\n",
-      "[7]\tvalidation_0-rmse:96766.4\n",
-      "[8]\tvalidation_0-rmse:89335.2\n",
-      "[9]\tvalidation_0-rmse:82607.6\n",
-      "[10]\tvalidation_0-rmse:76919.9\n",
-      "[11]\tvalidation_0-rmse:71790.4\n",
-      "[12]\tvalidation_0-rmse:67176.9\n",
-      "[13]\tvalidation_0-rmse:63048.6\n",
-      "[14]\tvalidation_0-rmse:59472.9\n",
-      "[15]\tvalidation_0-rmse:56403.7\n",
-      "[16]\tvalidation_0-rmse:53889.9\n",
-      "[17]\tvalidation_0-rmse:51593.5\n",
-      "[18]\tvalidation_0-rmse:49582.4\n",
-      "[19]\tvalidation_0-rmse:47969.7\n",
-      "[20]\tvalidation_0-rmse:46531.2\n",
-      "[21]\tvalidation_0-rmse:45050.2\n",
-      "[22]\tvalidation_0-rmse:43583.5\n",
-      "[23]\tvalidation_0-rmse:42108.3\n",
-      "[24]\tvalidation_0-rmse:41427.7\n",
-      "[25]\tvalidation_0-rmse:40973\n",
-      "[26]\tvalidation_0-rmse:40338.4\n",
-      "[27]\tvalidation_0-rmse:39894.4\n",
-      "[28]\tvalidation_0-rmse:39498.5\n",
-      "[29]\tvalidation_0-rmse:38721.8\n",
-      "[30]\tvalidation_0-rmse:38134.4\n",
-      "[31]\tvalidation_0-rmse:37745.9\n",
-      "[32]\tvalidation_0-rmse:37332\n",
-      "[33]\tvalidation_0-rmse:37075.9\n",
-      "[34]\tvalidation_0-rmse:36906.9\n",
-      "[35]\tvalidation_0-rmse:36663.3\n",
-      "[36]\tvalidation_0-rmse:36419.6\n",
-      "[37]\tvalidation_0-rmse:36296.5\n",
-      "[38]\tvalidation_0-rmse:36124.3\n",
-      "[39]\tvalidation_0-rmse:35641\n",
-      "[40]\tvalidation_0-rmse:35403.2\n",
-      "[41]\tvalidation_0-rmse:34984.6\n",
-      "[42]\tvalidation_0-rmse:34618.4\n",
-      "[43]\tvalidation_0-rmse:34734.1\n",
-      "[44]\tvalidation_0-rmse:34620.8\n",
-      "[45]\tvalidation_0-rmse:34448.4\n",
-      "[46]\tvalidation_0-rmse:34438.7\n",
-      "[47]\tvalidation_0-rmse:34380.2\n",
-      "[48]\tvalidation_0-rmse:34105.4\n",
-      "[49]\tvalidation_0-rmse:34062.5\n",
-      "[50]\tvalidation_0-rmse:33997.5\n",
-      "[51]\tvalidation_0-rmse:33942.9\n",
-      "[52]\tvalidation_0-rmse:33938.8\n",
-      "[53]\tvalidation_0-rmse:34104.4\n",
-      "[54]\tvalidation_0-rmse:33985.1\n",
-      "[55]\tvalidation_0-rmse:33892.4\n",
-      "[56]\tvalidation_0-rmse:33832.6\n",
-      "[57]\tvalidation_0-rmse:33775.2\n",
-      "[58]\tvalidation_0-rmse:33853.8\n",
-      "[59]\tvalidation_0-rmse:34027.1\n",
-      "[60]\tvalidation_0-rmse:33930.8\n",
-      "[61]\tvalidation_0-rmse:33780.6\n",
-      "[62]\tvalidation_0-rmse:33684.1\n",
-      "[63]\tvalidation_0-rmse:33622\n",
-      "[64]\tvalidation_0-rmse:33532.1\n",
-      "[65]\tvalidation_0-rmse:33372.2\n",
-      "[66]\tvalidation_0-rmse:33331.3\n",
-      "[67]\tvalidation_0-rmse:33350.5\n",
-      "[68]\tvalidation_0-rmse:33301.2\n",
-      "[69]\tvalidation_0-rmse:33323.2\n",
-      "[70]\tvalidation_0-rmse:33299.8\n",
-      "[71]\tvalidation_0-rmse:33149.8\n",
-      "[72]\tvalidation_0-rmse:33155.7\n",
-      "[73]\tvalidation_0-rmse:33106.8\n",
-      "[74]\tvalidation_0-rmse:33070\n",
-      "[75]\tvalidation_0-rmse:32907.8\n",
-      "[76]\tvalidation_0-rmse:32913.3\n",
-      "[77]\tvalidation_0-rmse:32829\n",
-      "[78]\tvalidation_0-rmse:32816.5\n",
-      "[79]\tvalidation_0-rmse:32846.9\n",
-      "[80]\tvalidation_0-rmse:32833.8\n",
-      "[81]\tvalidation_0-rmse:32825\n",
-      "[82]\tvalidation_0-rmse:32790.6\n",
-      "[83]\tvalidation_0-rmse:32768.8\n",
-      "[84]\tvalidation_0-rmse:32869.5\n",
-      "[85]\tvalidation_0-rmse:32843.5\n",
-      "[86]\tvalidation_0-rmse:32858.2\n",
-      "[87]\tvalidation_0-rmse:32866\n",
-      "[88]\tvalidation_0-rmse:32787.7\n",
+      "[1]\tvalidation_0-rmse:158032\n",
+      "[2]\tvalidation_0-rmse:143739\n",
+      "[3]\tvalidation_0-rmse:131149\n",
+      "[4]\tvalidation_0-rmse:119581\n",
+      "[5]\tvalidation_0-rmse:109156\n",
+      "[6]\tvalidation_0-rmse:99921.6\n",
+      "[7]\tvalidation_0-rmse:91262.7\n",
+      "[8]\tvalidation_0-rmse:84303.6\n",
+      "[9]\tvalidation_0-rmse:77430.7\n",
+      "[10]\tvalidation_0-rmse:71938.9\n",
+      "[11]\tvalidation_0-rmse:66770.5\n",
+      "[12]\tvalidation_0-rmse:62565.4\n",
+      "[13]\tvalidation_0-rmse:58469.7\n",
+      "[14]\tvalidation_0-rmse:54934.7\n",
+      "[15]\tvalidation_0-rmse:51896.2\n",
+      "[16]\tvalidation_0-rmse:49037.4\n",
+      "[17]\tvalidation_0-rmse:46622.8\n",
+      "[18]\tvalidation_0-rmse:44883.8\n",
+      "[19]\tvalidation_0-rmse:42801.4\n",
+      "[20]\tvalidation_0-rmse:41205\n",
+      "[21]\tvalidation_0-rmse:39729.8\n",
+      "[22]\tvalidation_0-rmse:38328.2\n",
+      "[23]\tvalidation_0-rmse:37448.6\n",
+      "[24]\tvalidation_0-rmse:36593.5\n",
+      "[25]\tvalidation_0-rmse:35607\n",
+      "[26]\tvalidation_0-rmse:34892.4\n",
+      "[27]\tvalidation_0-rmse:34332.4\n",
+      "[28]\tvalidation_0-rmse:33891.4\n",
+      "[29]\tvalidation_0-rmse:33487.3\n",
+      "[30]\tvalidation_0-rmse:33264.4\n",
+      "[31]\tvalidation_0-rmse:32920\n",
+      "[32]\tvalidation_0-rmse:32487.8\n",
+      "[33]\tvalidation_0-rmse:32223.6\n",
+      "[34]\tvalidation_0-rmse:31827.2\n",
+      "[35]\tvalidation_0-rmse:31659.2\n",
+      "[36]\tvalidation_0-rmse:31369.3\n",
+      "[37]\tvalidation_0-rmse:31089.8\n",
+      "[38]\tvalidation_0-rmse:30930.7\n",
+      "[39]\tvalidation_0-rmse:30684.1\n",
+      "[40]\tvalidation_0-rmse:30620.5\n",
+      "[41]\tvalidation_0-rmse:30436.9\n",
+      "[42]\tvalidation_0-rmse:30231.5\n",
+      "[43]\tvalidation_0-rmse:30167.7\n",
+      "[44]\tvalidation_0-rmse:30063.4\n",
+      "[45]\tvalidation_0-rmse:30007.2\n",
+      "[46]\tvalidation_0-rmse:29946.7\n",
+      "[47]\tvalidation_0-rmse:29902.1\n",
+      "[48]\tvalidation_0-rmse:29780.7\n",
+      "[49]\tvalidation_0-rmse:29725.4\n",
+      "[50]\tvalidation_0-rmse:29522.1\n",
+      "[51]\tvalidation_0-rmse:29486\n",
+      "[52]\tvalidation_0-rmse:29439.2\n",
+      "[53]\tvalidation_0-rmse:29288.3\n",
+      "[54]\tvalidation_0-rmse:29253.4\n",
+      "[55]\tvalidation_0-rmse:29121.1\n",
+      "[56]\tvalidation_0-rmse:29076.9\n",
+      "[57]\tvalidation_0-rmse:29010.4\n",
+      "[58]\tvalidation_0-rmse:28954.9\n",
+      "[59]\tvalidation_0-rmse:28910.3\n",
+      "[60]\tvalidation_0-rmse:28882.5\n",
+      "[61]\tvalidation_0-rmse:28731\n",
+      "[62]\tvalidation_0-rmse:28711.2\n",
+      "[63]\tvalidation_0-rmse:28609.4\n",
+      "[64]\tvalidation_0-rmse:28646.9\n",
+      "[65]\tvalidation_0-rmse:28628.1\n",
+      "[66]\tvalidation_0-rmse:28622.4\n",
+      "[67]\tvalidation_0-rmse:28544.2\n",
+      "[68]\tvalidation_0-rmse:28517\n",
+      "[69]\tvalidation_0-rmse:28510.4\n",
+      "[70]\tvalidation_0-rmse:28488.4\n",
+      "[71]\tvalidation_0-rmse:28370.9\n",
+      "[72]\tvalidation_0-rmse:28395.6\n",
+      "[73]\tvalidation_0-rmse:28376.7\n",
+      "[74]\tvalidation_0-rmse:28398.8\n",
+      "[75]\tvalidation_0-rmse:28374.3\n",
+      "[76]\tvalidation_0-rmse:28368.9\n",
+      "[77]\tvalidation_0-rmse:28374.4\n",
+      "[78]\tvalidation_0-rmse:28363.1\n",
+      "[79]\tvalidation_0-rmse:28333.6\n",
+      "[80]\tvalidation_0-rmse:28255.1\n",
+      "[81]\tvalidation_0-rmse:28261.8\n",
+      "[82]\tvalidation_0-rmse:28259.1\n",
+      "[83]\tvalidation_0-rmse:28257.7\n",
+      "[84]\tvalidation_0-rmse:28292.1\n",
+      "[85]\tvalidation_0-rmse:28247.5\n",
+      "[86]\tvalidation_0-rmse:28350.6\n",
+      "[87]\tvalidation_0-rmse:28339.5\n",
+      "[88]\tvalidation_0-rmse:28315.6\n",
+      "[89]\tvalidation_0-rmse:28324.1\n",
+      "[90]\tvalidation_0-rmse:28345.8\n",
       "Stopping. Best iteration:\n",
-      "[83]\tvalidation_0-rmse:32768.8\n",
+      "[85]\tvalidation_0-rmse:28247.5\n",
       "\n"
      ]
     },
@@ -233,7 +235,7 @@
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +262,7 @@
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,12 +271,14 @@
     "# iteration 72 is best \n",
     "my_model = XGBRegressor(n_estimators=110)\n",
     "# Add silent=True to avoid printing out updates with each cycle\n",
+    "#this is done to prevent leaky validation stratregy\n",
+    "X = my_imputer.fit_transform(X)\n",
     "my_model.fit(X, y, verbose=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
