made a basic kaggle template

--- a/House_Prices_Prediction/XGBoost Submission.ipynb
+++ b/House_Prices_Prediction/XGBoost Submission.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -100,7 +102,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error : 16745.1397795\n"
+      "Mean Absolute Error : 16804.9110017\n"
      ]
     }
    ],
@@ -128,100 +130,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-rmse:173945\n",
+      "[0]\tvalidation_0-rmse:180127\n",
       "Will train until validation_0-rmse hasn't improved in 5 rounds.\n",
-      "[1]\tvalidation_0-rmse:158032\n",
-      "[2]\tvalidation_0-rmse:143739\n",
-      "[3]\tvalidation_0-rmse:131149\n",
-      "[4]\tvalidation_0-rmse:119581\n",
-      "[5]\tvalidation_0-rmse:109156\n",
-      "[6]\tvalidation_0-rmse:99921.6\n",
-      "[7]\tvalidation_0-rmse:91262.7\n",
-      "[8]\tvalidation_0-rmse:84303.6\n",
-      "[9]\tvalidation_0-rmse:77430.7\n",
-      "[10]\tvalidation_0-rmse:71938.9\n",
-      "[11]\tvalidation_0-rmse:66770.5\n",
-      "[12]\tvalidation_0-rmse:62565.4\n",
-      "[13]\tvalidation_0-rmse:58469.7\n",
-      "[14]\tvalidation_0-rmse:54934.7\n",
-      "[15]\tvalidation_0-rmse:51896.2\n",
-      "[16]\tvalidation_0-rmse:49037.4\n",
-      "[17]\tvalidation_0-rmse:46622.8\n",
-      "[18]\tvalidation_0-rmse:44883.8\n",
-      "[19]\tvalidation_0-rmse:42801.4\n",
-      "[20]\tvalidation_0-rmse:41205\n",
-      "[21]\tvalidation_0-rmse:39729.8\n",
-      "[22]\tvalidation_0-rmse:38328.2\n",
-      "[23]\tvalidation_0-rmse:37448.6\n",
-      "[24]\tvalidation_0-rmse:36593.5\n",
-      "[25]\tvalidation_0-rmse:35607\n",
-      "[26]\tvalidation_0-rmse:34892.4\n",
-      "[27]\tvalidation_0-rmse:34332.4\n",
-      "[28]\tvalidation_0-rmse:33891.4\n",
-      "[29]\tvalidation_0-rmse:33487.3\n",
-      "[30]\tvalidation_0-rmse:33264.4\n",
-      "[31]\tvalidation_0-rmse:32920\n",
-      "[32]\tvalidation_0-rmse:32487.8\n",
-      "[33]\tvalidation_0-rmse:32223.6\n",
-      "[34]\tvalidation_0-rmse:31827.2\n",
-      "[35]\tvalidation_0-rmse:31659.2\n",
-      "[36]\tvalidation_0-rmse:31369.3\n",
-      "[37]\tvalidation_0-rmse:31089.8\n",
-      "[38]\tvalidation_0-rmse:30930.7\n",
-      "[39]\tvalidation_0-rmse:30684.1\n",
-      "[40]\tvalidation_0-rmse:30620.5\n",
-      "[41]\tvalidation_0-rmse:30436.9\n",
-      "[42]\tvalidation_0-rmse:30231.5\n",
-      "[43]\tvalidation_0-rmse:30167.7\n",
-      "[44]\tvalidation_0-rmse:30063.4\n",
-      "[45]\tvalidation_0-rmse:30007.2\n",
-      "[46]\tvalidation_0-rmse:29946.7\n",
-      "[47]\tvalidation_0-rmse:29902.1\n",
-      "[48]\tvalidation_0-rmse:29780.7\n",
-      "[49]\tvalidation_0-rmse:29725.4\n",
-      "[50]\tvalidation_0-rmse:29522.1\n",
-      "[51]\tvalidation_0-rmse:29486\n",
-      "[52]\tvalidation_0-rmse:29439.2\n",
-      "[53]\tvalidation_0-rmse:29288.3\n",
-      "[54]\tvalidation_0-rmse:29253.4\n",
-      "[55]\tvalidation_0-rmse:29121.1\n",
-      "[56]\tvalidation_0-rmse:29076.9\n",
-      "[57]\tvalidation_0-rmse:29010.4\n",
-      "[58]\tvalidation_0-rmse:28954.9\n",
-      "[59]\tvalidation_0-rmse:28910.3\n",
-      "[60]\tvalidation_0-rmse:28882.5\n",
-      "[61]\tvalidation_0-rmse:28731\n",
-      "[62]\tvalidation_0-rmse:28711.2\n",
-      "[63]\tvalidation_0-rmse:28609.4\n",
-      "[64]\tvalidation_0-rmse:28646.9\n",
-      "[65]\tvalidation_0-rmse:28628.1\n",
-      "[66]\tvalidation_0-rmse:28622.4\n",
-      "[67]\tvalidation_0-rmse:28544.2\n",
-      "[68]\tvalidation_0-rmse:28517\n",
-      "[69]\tvalidation_0-rmse:28510.4\n",
-      "[70]\tvalidation_0-rmse:28488.4\n",
-      "[71]\tvalidation_0-rmse:28370.9\n",
-      "[72]\tvalidation_0-rmse:28395.6\n",
-      "[73]\tvalidation_0-rmse:28376.7\n",
-      "[74]\tvalidation_0-rmse:28398.8\n",
-      "[75]\tvalidation_0-rmse:28374.3\n",
-      "[76]\tvalidation_0-rmse:28368.9\n",
-      "[77]\tvalidation_0-rmse:28374.4\n",
-      "[78]\tvalidation_0-rmse:28363.1\n",
-      "[79]\tvalidation_0-rmse:28333.6\n",
-      "[80]\tvalidation_0-rmse:28255.1\n",
-      "[81]\tvalidation_0-rmse:28261.8\n",
-      "[82]\tvalidation_0-rmse:28259.1\n",
-      "[83]\tvalidation_0-rmse:28257.7\n",
-      "[84]\tvalidation_0-rmse:28292.1\n",
-      "[85]\tvalidation_0-rmse:28247.5\n",
-      "[86]\tvalidation_0-rmse:28350.6\n",
-      "[87]\tvalidation_0-rmse:28339.5\n",
-      "[88]\tvalidation_0-rmse:28315.6\n",
-      "[89]\tvalidation_0-rmse:28324.1\n",
-      "[90]\tvalidation_0-rmse:28345.8\n",
+      "[1]\tvalidation_0-rmse:163178\n",
+      "[2]\tvalidation_0-rmse:148071\n",
+      "[3]\tvalidation_0-rmse:134366\n",
+      "[4]\tvalidation_0-rmse:121776\n",
+      "[5]\tvalidation_0-rmse:110703\n",
+      "[6]\tvalidation_0-rmse:100909\n",
+      "[7]\tvalidation_0-rmse:92121.5\n",
+      "[8]\tvalidation_0-rmse:84530.7\n",
+      "[9]\tvalidation_0-rmse:77713.8\n",
+      "[10]\tvalidation_0-rmse:71691.8\n",
+      "[11]\tvalidation_0-rmse:66388.2\n",
+      "[12]\tvalidation_0-rmse:61786.9\n",
+      "[13]\tvalidation_0-rmse:57560.1\n",
+      "[14]\tvalidation_0-rmse:53787.1\n",
+      "[15]\tvalidation_0-rmse:50706.8\n",
+      "[16]\tvalidation_0-rmse:47694.1\n",
+      "[17]\tvalidation_0-rmse:45319.8\n",
+      "[18]\tvalidation_0-rmse:43072.9\n",
+      "[19]\tvalidation_0-rmse:41381.9\n",
+      "[20]\tvalidation_0-rmse:39911.9\n",
+      "[21]\tvalidation_0-rmse:38732.7\n",
+      "[22]\tvalidation_0-rmse:37664.2\n",
+      "[23]\tvalidation_0-rmse:36774.1\n",
+      "[24]\tvalidation_0-rmse:35932.8\n",
+      "[25]\tvalidation_0-rmse:35426.6\n",
+      "[26]\tvalidation_0-rmse:34881.3\n",
+      "[27]\tvalidation_0-rmse:34474.7\n",
+      "[28]\tvalidation_0-rmse:33931.6\n",
+      "[29]\tvalidation_0-rmse:33562.1\n",
+      "[30]\tvalidation_0-rmse:33386.9\n",
+      "[31]\tvalidation_0-rmse:33088.4\n",
+      "[32]\tvalidation_0-rmse:33052.9\n",
+      "[33]\tvalidation_0-rmse:32769.1\n",
+      "[34]\tvalidation_0-rmse:32490.8\n",
+      "[35]\tvalidation_0-rmse:32374.1\n",
+      "[36]\tvalidation_0-rmse:32155.6\n",
+      "[37]\tvalidation_0-rmse:32025.8\n",
+      "[38]\tvalidation_0-rmse:31913.8\n",
+      "[39]\tvalidation_0-rmse:31861.6\n",
+      "[40]\tvalidation_0-rmse:31818.9\n",
+      "[41]\tvalidation_0-rmse:31804.6\n",
+      "[42]\tvalidation_0-rmse:31828.3\n",
+      "[43]\tvalidation_0-rmse:31754.1\n",
+      "[44]\tvalidation_0-rmse:31623.9\n",
+      "[45]\tvalidation_0-rmse:31531\n",
+      "[46]\tvalidation_0-rmse:31564\n",
+      "[47]\tvalidation_0-rmse:31484.5\n",
+      "[48]\tvalidation_0-rmse:31398.5\n",
+      "[49]\tvalidation_0-rmse:31343.3\n",
+      "[50]\tvalidation_0-rmse:31393.6\n",
+      "[51]\tvalidation_0-rmse:31417\n",
+      "[52]\tvalidation_0-rmse:31357.8\n",
+      "[53]\tvalidation_0-rmse:31318.1\n",
+      "[54]\tvalidation_0-rmse:31300.7\n",
+      "[55]\tvalidation_0-rmse:31288.9\n",
+      "[56]\tvalidation_0-rmse:31304.5\n",
+      "[57]\tvalidation_0-rmse:31275.6\n",
+      "[58]\tvalidation_0-rmse:31260.2\n",
+      "[59]\tvalidation_0-rmse:31418.1\n",
+      "[60]\tvalidation_0-rmse:31305.5\n",
+      "[61]\tvalidation_0-rmse:31275.9\n",
+      "[62]\tvalidation_0-rmse:31286.2\n",
+      "[63]\tvalidation_0-rmse:31262\n",
       "Stopping. Best iteration:\n",
-      "[85]\tvalidation_0-rmse:28247.5\n",
+      "[58]\tvalidation_0-rmse:31260.2\n",
       "\n"
      ]
     },
@@ -257,7 +232,7 @@
       "text/plain": [
        "XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
        "       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-       "       min_child_weight=1, missing=None, n_estimators=110, nthread=-1,\n",
+       "       min_child_weight=1, missing=None, n_estimators=1000, nthread=-1,\n",
        "       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
@@ -269,7 +244,7 @@
    ],
    "source": [
     "# iteration 72 is best \n",
-    "my_model = XGBRegressor(n_estimators=110)\n",
+    "my_model = XGBRegressor(n_estimators=1000)\n",
     "# Add silent=True to avoid printing out updates with each cycle\n",
     "#this is done to prevent leaky validation stratregy\n",
     "X = my_imputer.fit_transform(X)\n",
@@ -304,8 +279,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 125856.7421875  160742.078125   177234.4375    ...,  178432.8125\n",
-      "  119145.359375   237922.515625 ]\n"
+      "[ 124559.5625    165771.921875  183148.75     ...,  175554.578125\n",
+      "  107897.734375  231158.59375 ]\n"
      ]
     }
    ],
