--- a/Titanic_survival/titanic_beginning(Decision_Tree).ipynb
+++ b/Titanic_survival/titanic_beginning(Decision_Tree).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,19 @@
     "import pandas as pd\n",
     "\n",
     "#model algorithms\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor, DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
     "from sklearn.ensemble import GradientBoostingRegressor, GradientBoostingClassifier\n",
-    "from xgboost import XGBRegressor #this is not scikit's xgboost\n",
+    "from xgboost import XGBRegressor, XGBClassifier #this is not scikit's xgboost\n",
     "\n",
     "#for plotting data\n",
     "from sklearn.ensemble.partial_dependence import partial_dependence, plot_partial_dependence\n",
     "import matplotlib.pyplot as plt\n",
-    "# import seaborn and alias it as sns\n",
     "import seaborn as sns\n",
     "\n",
     "#validation\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_absolute_error, accuracy_score\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "#pre-processing\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -50,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 70,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, submission_data = get_data()"
@@ -61,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1213,42 +1210,122 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#used for analyzing the data\n",
-    "pd.read_csv('train.csv')"
+    "pd.read_csv('train.csv')\n",
+    "#print(train_data.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = train_data.Survived\n",
+    "cols_to_use = ['Pclass', 'SibSp', 'Parch', 'Fare']\n",
+    "X = train_data[cols_to_use]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_accuracy(max_leaf_nodes, predictors_train, predictors_val, targ_train, targ_val):\n",
+    "    model = DecisionTreeClassifier(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
+    "    model.fit(predictors_train, targ_train)\n",
+    "    preds_val = model.predict(predictors_val)\n",
+    "    accuracy = accuracy_score(targ_val, preds_val)\n",
+    "    return(accuracy)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max leaf nodes: 2  \t\t Accuracy:  0.672646\n",
+      "Max leaf nodes: 50  \t\t Accuracy:  0.726457\n",
+      "Max leaf nodes: 75  \t\t Accuracy:  0.744395\n",
+      "Max leaf nodes: 100  \t\t Accuracy:  0.717489\n",
+      "Max leaf nodes: 200  \t\t Accuracy:  0.704036\n",
+      "Max leaf nodes: 500  \t\t Accuracy:  0.704036\n",
+      "Max leaf nodes: 2000  \t\t Accuracy:  0.704036\n",
+      "Max leaf nodes: 5000  \t\t Accuracy:  0.704036\n",
+      "Max leaf nodes: 10000  \t\t Accuracy:  0.704036\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train-test split\n",
+    "train_X, val_X, train_y, val_y = train_test_split(X,\n",
+    "                                                  y,random_state = 0)\n",
+    "\n",
+    "# compare accuracy_score with differing values of max_leaf_nodes\n",
+    "for max_leaf_nodes in [2, 50, 75, 100, 200, 500, 2000, 5000, 10000]:\n",
+    "    my_accuracy_score = get_accuracy(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
+    "    #print(predicted_vals)\n",
+    "    print(\"Max leaf nodes: %d  \\t\\t Accuracy:  %f\" %(max_leaf_nodes, my_accuracy_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass    0\n",
+      "SibSp     0\n",
+      "Parch     0\n",
+      "Fare      1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# choosing max_leaf_nodes as 75 [BEST ACCURACY]\n",
+    "my_model = DecisionTreeClassifier(max_leaf_nodes=75)\n",
+    "my_model.fit(X, y)\n",
+    "\n",
+    "my_imputer = Imputer()\n",
+    "test_data = submission_data[cols_to_use]\n",
+    "print(test_data.isnull().sum())\n",
+    "imputed_test_data = my_imputer.fit_transform(test_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(418,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission_predicted = my_model.predict(imputed_test_data)\n",
+    "print(submission_predicted.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1259,15 +1336,431 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>897</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>898</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>899</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>900</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>901</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>902</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>903</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>904</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>905</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>906</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>907</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>908</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>909</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>910</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>911</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>912</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>913</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>914</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>915</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>916</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>917</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>918</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>919</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>920</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>921</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>1280</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>389</th>\n",
+       "      <td>1281</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>1282</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391</th>\n",
+       "      <td>1283</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>1284</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>1285</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>1286</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>1287</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>1288</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>1289</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398</th>\n",
+       "      <td>1290</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>399</th>\n",
+       "      <td>1291</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>1292</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>1293</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>1294</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>1295</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>1296</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>1298</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>1299</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>408</th>\n",
+       "      <td>1300</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>1301</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>1302</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>1303</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>1304</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>413</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>414</th>\n",
+       "      <td>1306</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>415</th>\n",
+       "      <td>1307</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>1308</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>417</th>\n",
+       "      <td>1309</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>418 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived\n",
+       "0            892         0\n",
+       "1            893         0\n",
+       "2            894         0\n",
+       "3            895         0\n",
+       "4            896         1\n",
+       "5            897         0\n",
+       "6            898         0\n",
+       "7            899         1\n",
+       "8            900         0\n",
+       "9            901         0\n",
+       "10           902         0\n",
+       "11           903         0\n",
+       "12           904         1\n",
+       "13           905         1\n",
+       "14           906         1\n",
+       "15           907         0\n",
+       "16           908         0\n",
+       "17           909         0\n",
+       "18           910         0\n",
+       "19           911         0\n",
+       "20           912         1\n",
+       "21           913         0\n",
+       "22           914         1\n",
+       "23           915         0\n",
+       "24           916         1\n",
+       "25           917         0\n",
+       "26           918         0\n",
+       "27           919         0\n",
+       "28           920         1\n",
+       "29           921         0\n",
+       "..           ...       ...\n",
+       "388         1280         0\n",
+       "389         1281         0\n",
+       "390         1282         1\n",
+       "391         1283         1\n",
+       "392         1284         1\n",
+       "393         1285         0\n",
+       "394         1286         0\n",
+       "395         1287         1\n",
+       "396         1288         0\n",
+       "397         1289         1\n",
+       "398         1290         0\n",
+       "399         1291         0\n",
+       "400         1292         1\n",
+       "401         1293         0\n",
+       "402         1294         1\n",
+       "403         1295         0\n",
+       "404         1296         0\n",
+       "405         1297         1\n",
+       "406         1298         0\n",
+       "407         1299         0\n",
+       "408         1300         0\n",
+       "409         1301         0\n",
+       "410         1302         0\n",
+       "411         1303         1\n",
+       "412         1304         0\n",
+       "413         1305         0\n",
+       "414         1306         1\n",
+       "415         1307         0\n",
+       "416         1308         0\n",
+       "417         1309         1\n",
+       "\n",
+       "[418 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_submission = pd.DataFrame({'PassengerId': submission_data.PassengerId, 'Survived': submission_predicted})\n",
+    "my_submission.to_csv('submission_DecisionTree.csv', index=False)\n",
+    "pd.read_csv('submission_DecisionTree.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# my_submission = pd.DataFrame({'Id': submission_data.Id, 'SalePrice': predicted_prices})\n",
-    "# my_submission.to_csv('submission_XGBoost.csv', index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
