--- a/Titanic_survival/titanic_beginning(Random Forest).ipynb
+++ b/Titanic_survival/titanic_beginning(Random Forest).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1247,22 +1249,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def get_accuracy(max_leaf_nodes, predictors_train, predictors_val, targ_train, targ_val):\n",
-    "    model = DecisionTreeClassifier(max_leaf_nodes=max_leaf_nodes, random_state=0)\n",
-    "    model.fit(predictors_train, targ_train)\n",
-    "    preds_val = model.predict(predictors_val)\n",
-    "    accuracy = accuracy_score(targ_val, preds_val)\n",
-    "    return(accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -1270,15 +1256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max leaf nodes: 2  \t\t Accuracy:  0.672646\n",
-      "Max leaf nodes: 50  \t\t Accuracy:  0.726457\n",
-      "Max leaf nodes: 75  \t\t Accuracy:  0.744395\n",
-      "Max leaf nodes: 100  \t\t Accuracy:  0.717489\n",
-      "Max leaf nodes: 200  \t\t Accuracy:  0.704036\n",
-      "Max leaf nodes: 500  \t\t Accuracy:  0.704036\n",
-      "Max leaf nodes: 2000  \t\t Accuracy:  0.704036\n",
-      "Max leaf nodes: 5000  \t\t Accuracy:  0.704036\n",
-      "Max leaf nodes: 10000  \t\t Accuracy:  0.704036\n"
+      "0.699551569507\n"
      ]
     }
    ],
@@ -1287,11 +1265,11 @@
     "train_X, val_X, train_y, val_y = train_test_split(X,\n",
     "                                                  y,random_state = 0)\n",
     "\n",
-    "# compare accuracy_score with differing values of max_leaf_nodes\n",
-    "for max_leaf_nodes in [2, 50, 75, 100, 200, 500, 2000, 5000, 10000]:\n",
-    "    my_accuracy_score = get_accuracy(max_leaf_nodes, train_X, val_X, train_y, val_y)\n",
-    "    #print(predicted_vals)\n",
-    "    print(\"Max leaf nodes: %d  \\t\\t Accuracy:  %f\" %(max_leaf_nodes, my_accuracy_score))"
+    "my_model = RandomForestClassifier()\n",
+    "my_model.fit(train_X, train_y)\n",
+    "\n",
+    "train_preds = my_model.predict(val_X)\n",
+    "print(accuracy_score(train_preds, val_y))"
    ]
   },
   {
@@ -1312,34 +1290,10 @@
     }
    ],
    "source": [
-    "# choosing max_leaf_nodes as 75 [BEST ACCURACY]\n",
-    "my_model = DecisionTreeClassifier(max_leaf_nodes=75)\n",
-    "my_model.fit(X, y)\n",
-    "\n",
-    "\n",
     "my_imputer = Imputer()\n",
     "test_data = submission_data[cols_to_use]\n",
     "print(test_data.isnull().sum())\n",
     "imputed_test_data = my_imputer.fit_transform(test_data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.66329966  0.68686869  0.7003367 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "new_model = DecisionTreeClassifier()\n",
-    "scores = cross_val_score(new_model, X, y, scoring='accuracy')\n",
-    "print(scores)"
    ]
   },
   {
@@ -1369,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -1403,7 +1357,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>892</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1473,7 +1427,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>906</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -1483,7 +1437,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>908</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -1493,7 +1447,7 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>910</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -1503,7 +1457,7 @@
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>912</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
@@ -1513,17 +1467,17 @@
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>914</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>915</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>916</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -1533,7 +1487,7 @@
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>918</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -1543,7 +1497,7 @@
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>920</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
@@ -1578,7 +1532,7 @@
        "    <tr>\n",
        "      <th>392</th>\n",
        "      <td>1284</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>393</th>\n",
@@ -1593,7 +1547,7 @@
        "    <tr>\n",
        "      <th>395</th>\n",
        "      <td>1287</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
@@ -1638,7 +1592,7 @@
        "    <tr>\n",
        "      <th>404</th>\n",
        "      <td>1296</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>405</th>\n",
@@ -1653,7 +1607,7 @@
        "    <tr>\n",
        "      <th>407</th>\n",
        "      <td>1299</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>408</th>\n",
@@ -1712,7 +1666,7 @@
       ],
       "text/plain": [
        "     PassengerId  Survived\n",
-       "0            892         0\n",
+       "0            892         1\n",
        "1            893         0\n",
        "2            894         0\n",
        "3            895         0\n",
@@ -1726,31 +1680,31 @@
        "11           903         0\n",
        "12           904         1\n",
        "13           905         1\n",
-       "14           906         1\n",
+       "14           906         0\n",
        "15           907         0\n",
-       "16           908         0\n",
+       "16           908         1\n",
        "17           909         0\n",
-       "18           910         0\n",
+       "18           910         1\n",
        "19           911         0\n",
-       "20           912         1\n",
+       "20           912         0\n",
        "21           913         0\n",
-       "22           914         1\n",
-       "23           915         0\n",
-       "24           916         1\n",
+       "22           914         0\n",
+       "23           915         1\n",
+       "24           916         0\n",
        "25           917         0\n",
-       "26           918         0\n",
+       "26           918         1\n",
        "27           919         0\n",
-       "28           920         1\n",
+       "28           920         0\n",
        "29           921         0\n",
        "..           ...       ...\n",
        "388         1280         0\n",
        "389         1281         0\n",
        "390         1282         1\n",
        "391         1283         1\n",
-       "392         1284         1\n",
+       "392         1284         0\n",
        "393         1285         0\n",
        "394         1286         0\n",
-       "395         1287         1\n",
+       "395         1287         0\n",
        "396         1288         0\n",
        "397         1289         1\n",
        "398         1290         0\n",
@@ -1759,10 +1713,10 @@
        "401         1293         0\n",
        "402         1294         1\n",
        "403         1295         0\n",
-       "404         1296         0\n",
+       "404         1296         1\n",
        "405         1297         1\n",
        "406         1298         0\n",
-       "407         1299         0\n",
+       "407         1299         1\n",
        "408         1300         0\n",
        "409         1301         0\n",
        "410         1302         0\n",
@@ -1777,15 +1731,15 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "my_submission = pd.DataFrame({'PassengerId': submission_data.PassengerId, 'Survived': submission_predicted})\n",
-    "my_submission.to_csv('submission_DecisionTree.csv', index=False)\n",
-    "pd.read_csv('submission_DecisionTree.csv')"
+    "my_submission.to_csv('submission_RandomForest.csv', index=False)\n",
+    "pd.read_csv('submission_RandomForest.csv')"
    ]
   },
   {
