--- a/Titanic_survival/titanic_beginning(XGBoost).ipynb
+++ b/Titanic_survival/titanic_beginning(XGBoost).ipynb
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -1285,19 +1285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1328,21 +1317,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pclass        0\n",
-      "SibSp         0\n",
-      "Parch         0\n",
-      "Fare          1\n",
-      "Sex_female    0\n",
-      "Sex_male      0\n",
+      "Pclass         0\n",
+      "SibSp          0\n",
+      "Parch          0\n",
+      "Fare           1\n",
+      "Age           86\n",
+      "Sex_female     0\n",
+      "Sex_male       0\n",
       "dtype: int64\n",
       "<class 'numpy.ndarray'>\n",
       "<class 'numpy.ndarray'>\n",
@@ -1354,6 +1342,7 @@
     "# train-test split\n",
     "train_X, val_X, train_y, val_y = train_test_split(X,\n",
     "                                                  y,random_state = 0)\n",
+    "#handling age and fare NaN values\n",
     "my_imputer = Imputer()\n",
     "print(test_data.isnull().sum())\n",
     "train_X = my_imputer.fit_transform(train_X)\n",
@@ -1367,69 +1356,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\tvalidation_0-error:0.201794\n",
+      "[0]\tvalidation_0-error:0.179372\n",
       "Will train until validation_0-error hasn't improved in 50 rounds.\n",
-      "[1]\tvalidation_0-error:0.201794\n",
-      "[2]\tvalidation_0-error:0.201794\n",
-      "[3]\tvalidation_0-error:0.201794\n",
-      "[4]\tvalidation_0-error:0.201794\n",
-      "[5]\tvalidation_0-error:0.201794\n",
-      "[6]\tvalidation_0-error:0.201794\n",
-      "[7]\tvalidation_0-error:0.201794\n",
-      "[8]\tvalidation_0-error:0.201794\n",
-      "[9]\tvalidation_0-error:0.201794\n",
-      "[10]\tvalidation_0-error:0.201794\n",
-      "[11]\tvalidation_0-error:0.201794\n",
-      "[12]\tvalidation_0-error:0.201794\n",
-      "[13]\tvalidation_0-error:0.201794\n",
-      "[14]\tvalidation_0-error:0.201794\n",
-      "[15]\tvalidation_0-error:0.201794\n",
-      "[16]\tvalidation_0-error:0.201794\n",
-      "[17]\tvalidation_0-error:0.201794\n",
-      "[18]\tvalidation_0-error:0.201794\n",
-      "[19]\tvalidation_0-error:0.201794\n",
-      "[20]\tvalidation_0-error:0.201794\n",
-      "[21]\tvalidation_0-error:0.201794\n",
-      "[22]\tvalidation_0-error:0.201794\n",
-      "[23]\tvalidation_0-error:0.201794\n",
-      "[24]\tvalidation_0-error:0.201794\n",
-      "[25]\tvalidation_0-error:0.201794\n",
-      "[26]\tvalidation_0-error:0.201794\n",
-      "[27]\tvalidation_0-error:0.201794\n",
-      "[28]\tvalidation_0-error:0.201794\n",
-      "[29]\tvalidation_0-error:0.201794\n",
-      "[30]\tvalidation_0-error:0.201794\n",
-      "[31]\tvalidation_0-error:0.201794\n",
-      "[32]\tvalidation_0-error:0.201794\n",
-      "[33]\tvalidation_0-error:0.201794\n",
-      "[34]\tvalidation_0-error:0.201794\n",
-      "[35]\tvalidation_0-error:0.201794\n",
-      "[36]\tvalidation_0-error:0.201794\n",
-      "[37]\tvalidation_0-error:0.201794\n",
-      "[38]\tvalidation_0-error:0.201794\n",
-      "[39]\tvalidation_0-error:0.201794\n",
-      "[40]\tvalidation_0-error:0.201794\n",
-      "[41]\tvalidation_0-error:0.201794\n",
-      "[42]\tvalidation_0-error:0.201794\n",
-      "[43]\tvalidation_0-error:0.201794\n",
-      "[44]\tvalidation_0-error:0.201794\n",
-      "[45]\tvalidation_0-error:0.201794\n",
-      "[46]\tvalidation_0-error:0.201794\n",
-      "[47]\tvalidation_0-error:0.201794\n",
-      "[48]\tvalidation_0-error:0.201794\n",
-      "[49]\tvalidation_0-error:0.201794\n",
-      "[50]\tvalidation_0-error:0.201794\n",
+      "[1]\tvalidation_0-error:0.179372\n",
+      "[2]\tvalidation_0-error:0.179372\n",
+      "[3]\tvalidation_0-error:0.179372\n",
+      "[4]\tvalidation_0-error:0.179372\n",
+      "[5]\tvalidation_0-error:0.179372\n",
+      "[6]\tvalidation_0-error:0.179372\n",
+      "[7]\tvalidation_0-error:0.179372\n",
+      "[8]\tvalidation_0-error:0.179372\n",
+      "[9]\tvalidation_0-error:0.179372\n",
+      "[10]\tvalidation_0-error:0.179372\n",
+      "[11]\tvalidation_0-error:0.179372\n",
+      "[12]\tvalidation_0-error:0.179372\n",
+      "[13]\tvalidation_0-error:0.179372\n",
+      "[14]\tvalidation_0-error:0.179372\n",
+      "[15]\tvalidation_0-error:0.179372\n",
+      "[16]\tvalidation_0-error:0.179372\n",
+      "[17]\tvalidation_0-error:0.179372\n",
+      "[18]\tvalidation_0-error:0.179372\n",
+      "[19]\tvalidation_0-error:0.179372\n",
+      "[20]\tvalidation_0-error:0.179372\n",
+      "[21]\tvalidation_0-error:0.179372\n",
+      "[22]\tvalidation_0-error:0.179372\n",
+      "[23]\tvalidation_0-error:0.179372\n",
+      "[24]\tvalidation_0-error:0.179372\n",
+      "[25]\tvalidation_0-error:0.179372\n",
+      "[26]\tvalidation_0-error:0.179372\n",
+      "[27]\tvalidation_0-error:0.179372\n",
+      "[28]\tvalidation_0-error:0.179372\n",
+      "[29]\tvalidation_0-error:0.179372\n",
+      "[30]\tvalidation_0-error:0.179372\n",
+      "[31]\tvalidation_0-error:0.179372\n",
+      "[32]\tvalidation_0-error:0.179372\n",
+      "[33]\tvalidation_0-error:0.179372\n",
+      "[34]\tvalidation_0-error:0.179372\n",
+      "[35]\tvalidation_0-error:0.179372\n",
+      "[36]\tvalidation_0-error:0.179372\n",
+      "[37]\tvalidation_0-error:0.179372\n",
+      "[38]\tvalidation_0-error:0.179372\n",
+      "[39]\tvalidation_0-error:0.179372\n",
+      "[40]\tvalidation_0-error:0.179372\n",
+      "[41]\tvalidation_0-error:0.179372\n",
+      "[42]\tvalidation_0-error:0.179372\n",
+      "[43]\tvalidation_0-error:0.179372\n",
+      "[44]\tvalidation_0-error:0.179372\n",
+      "[45]\tvalidation_0-error:0.179372\n",
+      "[46]\tvalidation_0-error:0.179372\n",
+      "[47]\tvalidation_0-error:0.179372\n",
+      "[48]\tvalidation_0-error:0.179372\n",
+      "[49]\tvalidation_0-error:0.179372\n",
+      "[50]\tvalidation_0-error:0.179372\n",
       "Stopping. Best iteration:\n",
-      "[0]\tvalidation_0-error:0.201794\n",
+      "[0]\tvalidation_0-error:0.179372\n",
       "\n"
      ]
     },
@@ -1443,7 +1430,7 @@
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,14 +1444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.798206278027\n"
+      "0.820627802691\n"
      ]
     }
    ],
@@ -1475,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1475,7 @@
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,15 +1487,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(891, 6)\n",
-      "(418, 6)\n"
+      "(891, 7)\n",
+      "(418, 7)\n"
      ]
     }
    ],
@@ -1519,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1544,10 +1531,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1683,7 +1668,7 @@
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>913</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
@@ -1908,7 +1893,7 @@
        "18           910         1\n",
        "19           911         1\n",
        "20           912         0\n",
-       "21           913         0\n",
+       "21           913         1\n",
        "22           914         1\n",
        "23           915         0\n",
        "24           916         1\n",
@@ -1952,7 +1937,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
