SVM with updated parameters

--- a/Digit Recognizer/SVM.ipynb
+++ b/Digit Recognizer/SVM.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -2643,24 +2643,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10000, 784)\n",
+      "(42000, 784)\n",
       "<class 'pandas.core.frame.DataFrame'>\n"
      ]
     }
    ],
    "source": [
-    "# only sampling 10000 entries\n",
+    "# only sampling 25000 entries\n",
     "labels = train_data.label\n",
     "train_data.drop(['label'], axis=1, inplace=True)\n",
-    "train_data = train_data.iloc[:10000]\n",
-    "labels = labels.iloc[:10000]\n",
+    "train_data = train_data.iloc[:42000]\n",
+    "labels = labels.iloc[:42000]\n",
     "print(train_data.shape)\n",
     "print(type(train_data))"
    ]
@@ -4317,7 +4317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -4334,28 +4334,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1096"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = svm.SVC()\n",
-    "clf.fit(train_images, train_labels.values.ravel())\n",
-    "clf.score(test_images,test_labels)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4366,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4397,6 +4375,23 @@
     "test_images[test_images>0]=1\n",
     "train_images[train_images>0]=1\n",
     "submission_data[submission_data>0]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(31500, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_images.shape)"
    ]
   },
   {
@@ -6057,7 +6052,7 @@
     {
      "data": {
       "text/plain": [
-       "0.91439999999999999"
+       "0.96476190476190471"
       ]
      },
      "execution_count": 18,
@@ -6066,14 +6061,14 @@
     }
    ],
    "source": [
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(C=7, gamma=0.009, kernel='rbf')\n",
     "clf.fit(train_images, train_labels.values.ravel())\n",
-    "clf.score(test_images,test_labels)"
+    "clf.score(test_images,test_labels.values.ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -6084,7 +6079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -6108,7 +6103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -6120,7 +6115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
